--- a/html/juego.html
+++ b/html/juego.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Juego Atari</title>
@@ -17,8 +14,8 @@
             <table>
                 <thead>
                     <tr>
-                        <th>JUGADOR A</th>
-                        <th>JUGADOR B</th>
+                        <th>JUGADOR</th>
+                        <th>CONSOLA</th>
                     </tr>
                 </thead>
                 <tbody>
