--- a/html/juego.html
+++ b/html/juego.html
@@ -20,8 +20,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>0</td>
-                        <td>0</td>
+                        <td id="jugador">0</td>
+                        <td id="consola">0</td>
                     </tr>
                 </tbody>
             </table>
@@ -30,7 +30,7 @@
     </div>
 
     <div>
-        <canvas id="gameCanvas" width="1600" height="800"></canvas>
+        <canvas id="gameCanvas" width="800" height="500"></canvas>
     </div>
 
     <script src="../js/script.js"></script>
